--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body class="page">
     <div class="page__content">
       <header class="header">
-
+<img class="header__logo" src="./image/header/logo.svg" alt="Логотип">
       </header>
       <main>
           <section class="profile">
