--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
       </header>
       <main>
           <section class="profile">
-
+            <img class="profile__avatar" src="./image/profile/avatar.svg" alt="аватар"/>
+            <div class="profile__info">
+              <h1 class="profile__nickname">Жак Ив Кусто</h1><button class="profile__edit"><img src="./image/profile/edit-button.svg" alt="кнопка изменить"></button>
+              <p class="profile__profession">Исследователь океана</p>
+            </div>
+            <button class="profile__add-photo"><img src="./image/profile/add-button.svg" alt="кнопка добавить"></button>
           </section>
           <section class="elements">
-              
+
           </section>
       </main>
       <footer class="footer">
