--- a/index.html
+++ b/index.html
@@ -9,20 +9,97 @@
   <body class="page">
     <div class="page__content">
       <header class="header">
-<img class="header__logo" src="./image/header/logo.svg" alt="Логотип">
+        <img class="header__logo" src="./image/header/logo.svg" alt="Логотип" />
       </header>
       <main>
-          <section class="profile">
-            <img class="profile__avatar" src="./image/profile/avatar.svg" alt="аватар"/>
-            <div class="profile__info">
-              <h1 class="profile__nickname">Жак Ив Кусто</h1><button class="profile__edit"><img src="./image/profile/edit-button.svg" alt="кнопка изменить"></button>
-              <p class="profile__profession">Исследователь океана</p>
+        <section class="profile">
+          <img
+            class="profile__avatar"
+            src="./image/profile/avatar.svg"
+            alt="аватар"
+          />
+          <div class="profile__info">
+            <h1 class="profile__nickname">Жак Ив Кусто</h1>
+            <button class="profile__edit">
+              <img
+                src="./image/profile/edit-button.svg"
+                alt="кнопка изменить"
+              />
+            </button>
+            <p class="profile__profession">Исследователь океана</p>
+          </div>
+          <button class="profile__add-photo">
+            <img src="./image/profile/add-button.svg" alt="кнопка добавить" />
+          </button>
+        </section>
+        <section class="photo-grid">
+          <div class="photo-grid__element">
+            <img
+              class="photo-grid__image"
+              src="./image/elements/karachaevsk.jpg"
+              alt="развалины церкови в горах кавказа"
+            />
+            <div class="photo-grid__title-wrap">
+              <h2 class="photo-grid__title">Карачаевск</h2>
+              <button class="photo-grid__like-button">&#9825;</button>
             </div>
-            <button class="profile__add-photo"><img src="./image/profile/add-button.svg" alt="кнопка добавить"></button>
-          </section>
-          <section class="elements">
-
-          </section>
+          </div>
+          <div class="photo-grid__element">
+            <img
+              class="photo-grid__image"
+              src="./image/elements/elbrus.jpg"
+              alt="гора эльбрус"
+            />
+            <div class="photo-grid__title-wrap">
+              <h2 class="photo-grid__title">Эльбрус</h2>
+              <button class="photo-grid__like-button">&#9825;</button>
+            </div>
+          </div>
+          <div class="photo-grid__element">
+            <img
+              class="photo-grid__image"
+              src="./image/elements/dombay.jpg"
+              alt="хребет домбай"
+            />
+            <div class="photo-grid__title-wrap">
+              <h2 class="photo-grid__title">Домбай</h2>
+              <button class="photo-grid__like-button">&#9825;</button>
+            </div>
+          </div>
+          <div class="photo-grid__element">
+            <img
+              class="photo-grid__image"
+              src="./image/elements/elbrus.jpg"
+              alt="гора эльбрус"
+            />
+            <div class="photo-grid__title-wrap">
+              <h2 class="photo-grid__title">Эльбрус</h2>
+              <button class="photo-grid__like-button">&#9825;</button>
+            </div>
+          </div>
+          <div class="photo-grid__element">
+            <img
+              class="photo-grid__image"
+              src="./image/elements/dombay.jpg"
+              alt="хребет домбай"
+            />
+            <div class="photo-grid__title-wrap">
+              <h2 class="photo-grid__title">Домбай</h2>
+              <button class="photo-grid__like-button">&#9825;</button>
+            </div>
+          </div>
+          <div class="photo-grid__element">
+            <img
+              class="photo-grid__image"
+              src="./image/elements/karachaevsk.jpg"
+              alt="развалины церкови в горах кавказа"
+            />
+            <div class="photo-grid__title-wrap">
+              <h2 class="photo-grid__title">Карачаево-Черкесия</h2>
+              <button class="photo-grid__like-button">&#9825;</button>
+            </div>
+          </div>
+        </section>
       </main>
       <footer class="footer">
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
