--- a/index.html
+++ b/index.html
@@ -105,5 +105,28 @@
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
       </footer>
     </div>
+    <div class="popup animation__popup">
+      <div class="popup__body">
+        <form action="" class="popup__form animation__form">
+          <ul class="popup__form_content">
+            <li>
+              <h2 class="popup__form_title">Редактировать профиль</h2>
+            </li>
+            <li>
+              <input type="text" class="popup__form_nickname-input" value="Жак Ив Кусто">
+            </li>
+            <li>
+              <input type="text" class="popup__form_profession-input" value="Исследователь океана">
+            </li>
+            <li>
+              <button class="popup__form_save-button">Сохранить</button>
+            </li>
+            <li>
+              <button class="popup__close-button"></button>
+            </li>
+          </ul>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
