--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             />
             <div class="photo-grid__title-wrap">
               <h2 class="photo-grid__title">Карачаевск</h2>
-              <button class="photo-grid__like-button">&#9825;</button>
+              <button class="photo-grid__like-button"></button>
             </div>
           </div>
           <div class="photo-grid__element">
@@ -52,7 +52,7 @@
             />
             <div class="photo-grid__title-wrap">
               <h2 class="photo-grid__title">Эльбрус</h2>
-              <button class="photo-grid__like-button">&#9825;</button>
+              <button class="photo-grid__like-button"></button>
             </div>
           </div>
           <div class="photo-grid__element">
@@ -63,7 +63,7 @@
             />
             <div class="photo-grid__title-wrap">
               <h2 class="photo-grid__title">Домбай</h2>
-              <button class="photo-grid__like-button">&#9825;</button>
+              <button class="photo-grid__like-button"></button>
             </div>
           </div>
           <div class="photo-grid__element">
@@ -74,7 +74,7 @@
             />
             <div class="photo-grid__title-wrap">
               <h2 class="photo-grid__title">Эльбрус</h2>
-              <button class="photo-grid__like-button">&#9825;</button>
+              <button class="photo-grid__like-button"></button>
             </div>
           </div>
           <div class="photo-grid__element">
@@ -85,7 +85,7 @@
             />
             <div class="photo-grid__title-wrap">
               <h2 class="photo-grid__title">Домбай</h2>
-              <button class="photo-grid__like-button">&#9825;</button>
+              <button class="photo-grid__like-button"></button>
             </div>
           </div>
           <div class="photo-grid__element">
@@ -96,7 +96,7 @@
             />
             <div class="photo-grid__title-wrap">
               <h2 class="photo-grid__title">Карачаево-Черкесия</h2>
-              <button class="photo-grid__like-button">&#9825;</button>
+              <button class="photo-grid__like-button"></button>
             </div>
           </div>
         </section>
@@ -105,21 +105,29 @@
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
       </footer>
     </div>
-    <div class="popup animation__popup">
+    <div class="popup">
       <div class="popup__body">
-        <form action="" class="popup__form animation__form">
+        <form action="#" class="popup__form">
           <ul class="popup__form_content">
             <li>
               <h2 class="popup__form_title">Редактировать профиль</h2>
             </li>
             <li>
-              <input type="text" class="popup__form_nickname-input" value="Жак Ив Кусто">
+              <input
+                type="text"
+                class="popup__form_nickname-input"
+                value="Жак Ив Кусто"
+              />
             </li>
             <li>
-              <input type="text" class="popup__form_profession-input" value="Исследователь океана">
+              <input
+                type="text"
+                class="popup__form_profession-input"
+                value="Исследователь океана"
+              />
             </li>
             <li>
-              <button class="popup__form_save-button">Сохранить</button>
+              <button type="submit" class="popup__form_save-button">Сохранить</button>
             </li>
             <li>
               <button class="popup__close-button"></button>
@@ -128,5 +136,6 @@
         </form>
       </div>
     </div>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
