--- a/index.html
+++ b/index.html
@@ -108,26 +108,26 @@
     <div class="popup">
       <div class="popup__body">
         <form action="#" class="popup__form">
-          <ul class="popup__form_content">
+          <ul class="form__content">
             <li>
-              <h2 class="popup__form_title">Редактировать профиль</h2>
+              <h2 class="form__title">Редактировать профиль</h2>
             </li>
             <li>
               <input
                 type="text"
-                class="popup__form_nickname-input"
+                class="form__nickname-input"
                 value="Жак Ив Кусто"
               />
             </li>
             <li>
               <input
                 type="text"
-                class="popup__form_profession-input"
+                class="form__profession-input"
                 value="Исследователь океана"
               />
             </li>
             <li>
-              <button type="submit" class="popup__form_save-button">Сохранить</button>
+              <button type="submit" class="form__save-button">Сохранить</button>
             </li>
             <li>
               <button class="popup__close-button"></button>
