--- a/index.html
+++ b/index.html
@@ -108,26 +108,26 @@
     <div class="popup">
       <div class="popup__body">
         <form action="#" class="popup__form">
-          <ul class="form_content">
+          <ul class="popup__content">
             <li>
-              <h2 class="form_title">Редактировать профиль</h2>
+              <h2 class="popup__title">Редактировать профиль</h2>
             </li>
             <li>
               <input
                 type="text"
-                class="form_nickname-input"
+                class="popup__nickname-input"
                 value="Жак Ив Кусто"
               />
             </li>
             <li>
               <input
                 type="text"
-                class="form_profession-input"
+                class="popup__profession-input"
                 value="Исследователь океана"
               />
             </li>
             <li>
-              <button type="submit" class="form_save-button">Сохранить</button>
+              <button type="submit" class="popup__save-button">Сохранить</button>
             </li>
             <li>
               <button class="popup__close-button"></button>
