--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             alt="аватар"
           />
           <div class="profile__info">
-            <h1 class="profile__nickname">Жак Ив Кусто</h1>
-            <button class="profile__edit">
+            <h1 class="profile__nickname">Жак-Ив Кусто</h1>
+            <button type="button" class="profile__edit">
               <img
                 src="./image/profile/edit-button.svg"
                 alt="кнопка изменить"
@@ -28,7 +28,7 @@
             </button>
             <p class="profile__profession">Исследователь океана</p>
           </div>
-          <button class="profile__add-photo">
+          <button type="button" class="profile__add-photo">
             <img src="./image/profile/add-button.svg" alt="кнопка добавить" />
           </button>
         </section>
@@ -41,7 +41,7 @@
             />
             <div class="photo-grid__title-wrap">
               <h2 class="photo-grid__title">Карачаевск</h2>
-              <button class="photo-grid__like-button"></button>
+              <button type="button" class="photo-grid__like-button"></button>
             </div>
           </div>
           <div class="photo-grid__element">
@@ -52,7 +52,7 @@
             />
             <div class="photo-grid__title-wrap">
               <h2 class="photo-grid__title">Эльбрус</h2>
-              <button class="photo-grid__like-button"></button>
+              <button type="button" class="photo-grid__like-button"></button>
             </div>
           </div>
           <div class="photo-grid__element">
@@ -63,7 +63,7 @@
             />
             <div class="photo-grid__title-wrap">
               <h2 class="photo-grid__title">Домбай</h2>
-              <button class="photo-grid__like-button"></button>
+              <button type="button" class="photo-grid__like-button"></button>
             </div>
           </div>
           <div class="photo-grid__element">
@@ -74,7 +74,7 @@
             />
             <div class="photo-grid__title-wrap">
               <h2 class="photo-grid__title">Эльбрус</h2>
-              <button class="photo-grid__like-button"></button>
+              <button type="button" class="photo-grid__like-button"></button>
             </div>
           </div>
           <div class="photo-grid__element">
@@ -85,7 +85,7 @@
             />
             <div class="photo-grid__title-wrap">
               <h2 class="photo-grid__title">Домбай</h2>
-              <button class="photo-grid__like-button"></button>
+              <button type="button" class="photo-grid__like-button"></button>
             </div>
           </div>
           <div class="photo-grid__element">
@@ -96,7 +96,7 @@
             />
             <div class="photo-grid__title-wrap">
               <h2 class="photo-grid__title">Карачаево-Черкесия</h2>
-              <button class="photo-grid__like-button"></button>
+              <button type="button" class="photo-grid__like-button"></button>
             </div>
           </div>
         </section>
@@ -107,32 +107,24 @@
     </div>
     <div class="popup">
       <div class="popup__body">
-        <form action="#" class="popup__form">
-          <ul class="popup__content">
-            <li>
-              <h2 class="popup__title">Редактировать профиль</h2>
-            </li>
-            <li>
-              <input
-                type="text"
-                class="popup__nickname-input"
-                value="Жак Ив Кусто"
-              />
-            </li>
-            <li>
-              <input
-                type="text"
-                class="popup__profession-input"
-                value="Исследователь океана"
-              />
-            </li>
-            <li>
-              <button type="submit" class="popup__save-button">Сохранить</button>
-            </li>
-            <li>
-              <button class="popup__close-button"></button>
-            </li>
-          </ul>
+        <form action="#" name="profile-edit" class="popup__form">
+          <div class="popup__content">
+            <h2 class="popup__title">Редактировать профиль</h2>
+            <input
+              type="text"
+              name="nickname"
+              class="popup__input popup__nickname"
+              value=""
+            />
+            <input
+              type="text"
+              name="profession"
+              class="popup__input popup__profession"
+              value=""
+            />
+            <button type="submit" class="popup__save-button">Сохранить</button>
+            <button type="button" class="popup__close-button"></button>
+          </div>
         </form>
       </div>
     </div>
