--- a/index.html
+++ b/index.html
@@ -20,17 +20,10 @@
           />
           <div class="profile__info">
             <h1 class="profile__nickname">Жак-Ив Кусто</h1>
-            <button type="button" class="profile__edit">
-              <img
-                src="./image/profile/edit-button.svg"
-                alt="кнопка изменить"
-              />
-            </button>
+            <button type="button" class="profile__edit"></button>
             <p class="profile__profession">Исследователь океана</p>
           </div>
-          <button type="button" class="profile__add-photo">
-            <img src="./image/profile/add-button.svg" alt="кнопка добавить" />
-          </button>
+          <button type="button" class="profile__add-photo"></button>
         </section>
         <section class="photo-grid">
           <div class="photo-grid__element">
@@ -108,18 +101,20 @@
     <div class="popup">
       <div class="popup__body">
         <form action="#" name="profile-edit" class="popup__form">
-          <div class="popup__content">
+          <div class="popup__form-content">
             <h2 class="popup__title">Редактировать профиль</h2>
             <input
               type="text"
               name="nickname"
-              class="popup__input popup__nickname"
+              id="name"
+              class="popup__input popup__input_name_position"
               value=""
             />
             <input
               type="text"
               name="profession"
-              class="popup__input popup__profession"
+              id="prof"
+              class="popup__input popup__input_prof_position"
               value=""
             />
             <button type="submit" class="popup__save-button">Сохранить</button>
