--- a/index.html
+++ b/index.html
@@ -25,82 +25,16 @@
           </div>
           <button type="button" class="profile__add-photo"></button>
         </section>
-        <section class="photo-grid">
-          <div class="photo-grid__element">
-            <img
-              class="photo-grid__image"
-              src="./image/elements/karachaevsk.jpg"
-              alt="развалины церкови в горах кавказа"
-            />
-            <div class="photo-grid__title-wrap">
-              <h2 class="photo-grid__title">Карачаевск</h2>
-              <button type="button" class="photo-grid__like-button"></button>
-            </div>
-          </div>
-          <div class="photo-grid__element">
-            <img
-              class="photo-grid__image"
-              src="./image/elements/elbrus.jpg"
-              alt="гора эльбрус"
-            />
-            <div class="photo-grid__title-wrap">
-              <h2 class="photo-grid__title">Эльбрус</h2>
-              <button type="button" class="photo-grid__like-button"></button>
-            </div>
-          </div>
-          <div class="photo-grid__element">
-            <img
-              class="photo-grid__image"
-              src="./image/elements/dombay.jpg"
-              alt="хребет домбай"
-            />
-            <div class="photo-grid__title-wrap">
-              <h2 class="photo-grid__title">Домбай</h2>
-              <button type="button" class="photo-grid__like-button"></button>
-            </div>
-          </div>
-          <div class="photo-grid__element">
-            <img
-              class="photo-grid__image"
-              src="./image/elements/elbrus.jpg"
-              alt="гора эльбрус"
-            />
-            <div class="photo-grid__title-wrap">
-              <h2 class="photo-grid__title">Эльбрус</h2>
-              <button type="button" class="photo-grid__like-button"></button>
-            </div>
-          </div>
-          <div class="photo-grid__element">
-            <img
-              class="photo-grid__image"
-              src="./image/elements/dombay.jpg"
-              alt="хребет домбай"
-            />
-            <div class="photo-grid__title-wrap">
-              <h2 class="photo-grid__title">Домбай</h2>
-              <button type="button" class="photo-grid__like-button"></button>
-            </div>
-          </div>
-          <div class="photo-grid__element">
-            <img
-              class="photo-grid__image"
-              src="./image/elements/karachaevsk.jpg"
-              alt="развалины церкови в горах кавказа"
-            />
-            <div class="photo-grid__title-wrap">
-              <h2 class="photo-grid__title">Карачаево-Черкесия</h2>
-              <button type="button" class="photo-grid__like-button"></button>
-            </div>
-          </div>
+        <section class="photo-grid" id = 'cardlist'>
         </section>
       </main>
       <footer class="footer">
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
       </footer>
     </div>
-    <div class="popup">
+    <div class="popup" id="proffile">
       <div class="popup__body">
-        <form action="#" name="profile-edit" class="popup__form">
+        <form action="#" name="profile-edit" id = "profile-edit" class="popup__form">
           <div class="popup__form-content">
             <h2 class="popup__title">Редактировать профиль</h2>
             <input
@@ -123,6 +57,50 @@
         </form>
       </div>
     </div>
+    <div class="popup" id="createCard">
+      <div class="popup__body">
+        <form action="#" name="formCreate" id = 'formCreate' class="popup__form">
+          <div class="popup__form-content">
+            <h2 class="popup__title">Новое место</h2>
+            <input
+              type="text"
+              name="nickname"
+              id="place"
+              class="popup__input popup__input_place_position"
+              value="Название"
+            />
+            <input
+              type="text"
+              name="profession"
+              id="placeLink"
+              class="popup__input popup__input_place-link_position"
+              value="Ссылка на картинку"
+            />
+            <button type="submit" class="popup__save-button">Создать</button>
+            <button type="button" class="popup__close-button"></button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="popup" id="max-img">
+      <div class="popup__body">
+        <div class="popup__content-max-img">
+          <img class="popup__max-img" src="" alt="" />
+          <h2 class="popup__max-img-title">Архыз</h2>
+          <button type="button" class="popup__close-button"></button>
+        </div>
+      </div>
+    </div>
+    <template id="templatecard">
+      <div class="photo-grid__element">
+        <img class="photo-grid__image" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/chelyabinsk-oblast.jpg" alt="Архыз" />
+        <div class="photo-grid__title-wrap">
+          <h2 class="photo-grid__title">Архыз</h2>
+          <button type="button" class="photo-grid__like-button"></button>
+        </div>
+        <button type="button" class="photo-grid__delete-button"></button>
+      </div>
+    </template>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
