fix: prepend review bags

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
           </div>
           <button type="button" class="profile__add-photo"></button>
         </section>
-        <section class="photo-grid" id = 'cardlist'>
-        </section>
+        <section class="photo-grid" id="cardlist"></section>
       </main>
       <footer class="footer">
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
@@ -34,7 +33,12 @@
     </div>
     <div class="popup" id="proffile">
       <div class="popup__body">
-        <form action="#" name="profile-edit" id = "profile-edit" class="popup__form">
+        <form
+          action="#"
+          name="profile-edit"
+          id="profile-edit"
+          class="popup__form"
+        >
           <div class="popup__form-content">
             <h2 class="popup__title">Редактировать профиль</h2>
             <input
@@ -59,7 +63,7 @@
     </div>
     <div class="popup" id="createCard">
       <div class="popup__body">
-        <form action="#" name="formCreate" id = 'formCreate' class="popup__form">
+        <form action="#" name="formCreate" id="formCreate" class="popup__form">
           <div class="popup__form-content">
             <h2 class="popup__title">Новое место</h2>
             <input
@@ -85,7 +89,7 @@
     <div class="popup" id="max-img">
       <div class="popup__body">
         <div class="popup__content-max-img">
-          <img class="popup__max-img" src="" alt="" />
+          <img class="popup__max-img" src="#" alt="#" />
           <h2 class="popup__max-img-title">Архыз</h2>
           <button type="button" class="popup__close-button"></button>
         </div>
@@ -93,9 +97,9 @@
     </div>
     <template id="templatecard">
       <div class="photo-grid__element">
-        <img class="photo-grid__image" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/chelyabinsk-oblast.jpg" alt="Архыз" />
+        <img class="photo-grid__image" src="#" alt="#" />
         <div class="photo-grid__title-wrap">
-          <h2 class="photo-grid__title">Архыз</h2>
+          <h2 class="photo-grid__title">#</h2>
           <button type="button" class="photo-grid__like-button"></button>
         </div>
         <button type="button" class="photo-grid__delete-button"></button>
