--- a/index.html
+++ b/index.html
@@ -19,19 +19,20 @@
             alt="аватар"
           />
           <div class="profile__info">
-            <h1 class="profile__nickname">Жак-Ив Кусто</h1>
+            <h1 class="profile__nick-name">Жак-Ив Кусто</h1>
             <button type="button" class="profile__edit"></button>
             <p class="profile__profession">Исследователь океана</p>
           </div>
           <button type="button" class="profile__add-photo"></button>
         </section>
-        <section class="photo-grid" id="cardlist"></section>
+        <section class="photo-grid" id="card-list">
+        </section>
       </main>
       <footer class="footer">
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
       </footer>
     </div>
-    <div class="popup" id="proffile">
+    <div class="popup" id="profile">
       <div class="popup__body">
         <form
           action="#"
@@ -56,14 +57,14 @@
               value=""
             />
             <button type="submit" class="popup__save-button">Сохранить</button>
-            <button type="button" class="popup__close-button"></button>
+            <button type="button" class="popup__close-button" id="close-button-popup-profile"></button>
           </div>
         </form>
       </div>
     </div>
-    <div class="popup" id="createCard">
+    <div class="popup" id="create-card">
       <div class="popup__body">
-        <form action="#" name="formCreate" id="formCreate" class="popup__form">
+        <form action="#" name="formCreate" id="form-create" class="popup__form">
           <div class="popup__form-content">
             <h2 class="popup__title">Новое место</h2>
             <input
@@ -71,40 +72,45 @@
               name="nickname"
               id="place"
               class="popup__input popup__input_place_position"
-              value="Название"
+              placeholder="Название"
+              value=""
+              required
             />
             <input
-              type="text"
+              type="url"
               name="profession"
-              id="placeLink"
+              id="place-link"
               class="popup__input popup__input_place-link_position"
-              value="Ссылка на картинку"
+              placeholder="Ссылка на картинку"
+              value=""
+              required
             />
             <button type="submit" class="popup__save-button">Создать</button>
-            <button type="button" class="popup__close-button"></button>
+            <button type="button" class="popup__close-button" id="close-button-popup-create-card"></button>
           </div>
         </form>
       </div>
     </div>
-    <div class="popup" id="max-img">
+    <div class="popup popup_type_max-img" id="max-img">
       <div class="popup__body">
         <div class="popup__content-max-img">
           <img class="popup__max-img" src="#" alt="#" />
           <h2 class="popup__max-img-title">Архыз</h2>
-          <button type="button" class="popup__close-button"></button>
+          <button type="button" class="popup__close-button" id="close-button-popup-max-img"></button>
         </div>
       </div>
     </div>
-    <template id="templatecard">
-      <div class="photo-grid__element">
-        <img class="photo-grid__image" src="#" alt="#" />
-        <div class="photo-grid__title-wrap">
-          <h2 class="photo-grid__title">#</h2>
-          <button type="button" class="photo-grid__like-button"></button>
+    <template id="template-card">
+      <div class="card">
+        <img class="card__image" src="#" alt="#" />
+        <div class="card__title-wrap">
+          <h2 class="card__title">#</h2>
+          <button type="button" class="card__like-button"></button>
         </div>
-        <button type="button" class="photo-grid__delete-button"></button>
+        <button type="button" class="card__delete-button"></button>
       </div>
     </template>
+    <script src="./scripts/initialCards.js"></script>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
