--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
           </div>
           <button type="button" class="profile__add-photo"></button>
         </section>
-        <section class="photo-grid" id="card-list">
-        </section>
+        <section class="photo-grid" id="card-list"></section>
       </main>
       <footer class="footer">
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
@@ -56,20 +55,31 @@
               class="popup__input popup__input_prof_position"
               value=""
             />
-            <button type="submit" class="popup__save-button">Сохранить</button>
-            <button type="button" class="popup__close-button" id="close-button-popup-profile"></button>
+            <button type="submit" class="popup__save-button" id="save-btn">
+              Сохранить
+            </button>
+            <button
+              type="button"
+              class="popup__close-button"
+              id="close-btn-pup-profile"
+            ></button>
           </div>
         </form>
       </div>
     </div>
     <div class="popup" id="create-card">
       <div class="popup__body">
-        <form action="#" name="formCreate" id="form-create" class="popup__form">
+        <form
+          action="#"
+          name="form-create"
+          id="form-create"
+          class="popup__form"
+        >
           <div class="popup__form-content">
             <h2 class="popup__title">Новое место</h2>
             <input
               type="text"
-              name="nickname"
+              name="place"
               id="place"
               class="popup__input popup__input_place_position"
               placeholder="Название"
@@ -78,15 +88,21 @@
             />
             <input
               type="url"
-              name="profession"
+              name="place-link"
               id="place-link"
               class="popup__input popup__input_place-link_position"
               placeholder="Ссылка на картинку"
               value=""
               required
             />
-            <button type="submit" class="popup__save-button">Создать</button>
-            <button type="button" class="popup__close-button" id="close-button-popup-create-card"></button>
+            <button type="submit" class="popup__save-button" id="create-btn">
+              Создать
+            </button>
+            <button
+              type="button"
+              class="popup__close-button"
+              id="close-btn-pup-card"
+            ></button>
           </div>
         </form>
       </div>
@@ -96,7 +112,11 @@
         <div class="popup__content-max-img">
           <img class="popup__max-img" src="#" alt="#" />
           <h2 class="popup__max-img-title">Архыз</h2>
-          <button type="button" class="popup__close-button" id="close-button-popup-max-img"></button>
+          <button
+            type="button"
+            class="popup__close-button"
+            id="close-btn-popup-max-img"
+          ></button>
         </div>
       </div>
     </div>
