--- a/index.html
+++ b/index.html
@@ -37,23 +37,30 @@
           action="#"
           name="profile-edit"
           id="profile-edit"
-          class="popup__form"
+          class="form"
+          novalidate
         >
-          <div class="popup__form-content">
-            <h2 class="popup__title">Редактировать профиль</h2>
+          <div class="form__content">
+            <h2 class="form__title">Редактировать профиль</h2>
             <input
               type="text"
               name="nickname"
               id="name"
-              class="popup__input popup__input_name_position"
+              class="form__input form__input_name_position"
+              minlength="2"
+              maxlength="40"
+              required
             />
             <input
               type="text"
               name="profession"
               id="prof"
-              class="popup__input popup__input_prof_position"
+              class="form__input form__input_prof_position"
+              minlength="2"
+              maxlength="200"
+              required
             />
-            <button type="submit" class="popup__save-button" id="save-btn">
+            <button type="submit" class="form__save-button" id="save-btn">
               Сохранить
             </button>
             <button
@@ -71,27 +78,30 @@
           action="#"
           name="form-create"
           id="form-create"
-          class="popup__form"
+          class="form"
+          novalidate
         >
-          <div class="popup__form-content">
-            <h2 class="popup__title">Новое место</h2>
+          <div class="form__content">
+            <h2 class="form__title">Новое место</h2>
             <input
               type="text"
               name="place"
               id="place"
-              class="popup__input popup__input_place_position"
+              class="form__input form__input_place_position"
               placeholder="Название"
+              minlength="2"
+              maxlength="30"
               required
             />
             <input
               type="url"
               name="place-link"
               id="place-link"
-              class="popup__input popup__input_place-link_position"
+              class="form__input form__input_place-link_position"
               placeholder="Ссылка на картинку"
               required
             />
-            <button type="submit" class="popup__save-button" id="create-btn">
+            <button type="submit" class="form__save-button" id="create-btn">
               Создать
             </button>
             <button
