--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           action="#"
           name="profile-edit"
           id="profile-edit"
-          class="form"
+          class="form popup-content"
           novalidate
         >
           <div class="form__content">
@@ -62,7 +62,7 @@
               required
             />
             <span class="profession-input-error form__input-error form__input-error_profession_position"></span>
-            <button type="submit" class="form__save-button" id="save-btn">
+            <button type="submit" class="form__save-button submit-button" id="save-btn">
               Сохранить
             </button>
             <button
@@ -80,7 +80,7 @@
           action="#"
           name="form-create"
           id="form-create"
-          class="form"
+          class="form popup-content"
           novalidate
         >
           <div class="form__content">
@@ -105,7 +105,7 @@
               required
             />
             <span class="place-link-input-error form__input-error form__input-error_position"></span>
-            <button type="submit" class="form__save-button" id="create-btn">
+            <button type="submit" class="form__save-button submit-button" id="create-btn">
               Создать
             </button>
             <button
@@ -119,7 +119,7 @@
     </div>
     <div class="popup popup_type_max-img" id="max-img">
       <div class="popup__body">
-        <div class="popup__content-max-img">
+        <div class="popup__content-max-img popup-content">
           <img class="popup__max-img" src="#" alt="#" />
           <h2 class="popup__max-img-title">Архыз</h2>
           <button
@@ -141,6 +141,7 @@
       </div>
     </template>
     <script src="./scripts/initialCards.js"></script>
+    <script src="./scripts/validate.js"></script>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
