--- a/index.html
+++ b/index.html
@@ -140,8 +140,6 @@
         <button type="button" class="card__delete-button"></button>
       </div>
     </template>
-    <script src="./scripts/initialCards.js"></script>
-    <script src="./scripts/validate.js"></script>
-    <script src="./scripts/index.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
