feet: add class Popup

--- a/index.html
+++ b/index.html
@@ -62,13 +62,12 @@
               required
             />
             <span class="profession-input-error form__input-error form__input-error_profession_position"></span>
-            <button type="submit" class="form__save-button submit-button" id="save-btn">
+            <button type="submit" class="form__save-button submit-button">
               Сохранить
             </button>
             <button
               type="button"
               class="popup__close-button"
-              id="close-btn-pup-profile"
             ></button>
           </div>
         </form>
@@ -105,13 +104,12 @@
               required
             />
             <span class="place-link-input-error form__input-error form__input-error_place-link-input_position"></span>
-            <button type="submit" class="form__save-button submit-button" id="create-btn">
+            <button type="submit" class="form__save-button submit-button">
               Создать
             </button>
             <button
               type="button"
               class="popup__close-button"
-              id="close-btn-pup-card"
             ></button>
           </div>
         </form>
@@ -125,7 +123,6 @@
           <button
             type="button"
             class="popup__close-button"
-            id="close-btn-popup-max-img"
           ></button>
         </div>
       </div>
