feet: add class popupWithForm

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <span class="name-input-error form__input-error form__input-error_name_position"></span>
             <input
               type="text"
-              name="profession"
-              id="profession-input"
+              name="about-me"
+              id="about-me-input"
               class="form__input form__input_prof_position"
               minlength="2"
               maxlength="200"
@@ -86,7 +86,7 @@
             <h2 class="form__title">Новое место</h2>
             <input
               type="text"
-              name="place"
+              name="name"
               id="place-input"
               class="form__input form__input_place_position"
               placeholder="Название"
@@ -97,7 +97,7 @@
             <span class="place-input-error form__input-error form__input-error_place-input_position"></span>
             <input
               type="url"
-              name="place-link"
+              name="link"
               id="place-link-input"
               class="form__input form__input_place-link_position"
               placeholder="Ссылка на картинку"
