feet: add userInfo

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h2 class="form__title">Редактировать профиль</h2>
             <input
               type="text"
-              name="nickname"
+              name="nickName"
               id="name-input"
               class="form__input form__input_name_position"
               minlength="2"
@@ -54,14 +54,14 @@
             <span class="name-input-error form__input-error form__input-error_name_position"></span>
             <input
               type="text"
-              name="about-me"
+              name="aboutMe"
               id="about-me-input"
               class="form__input form__input_prof_position"
               minlength="2"
               maxlength="200"
               required
             />
-            <span class="profession-input-error form__input-error form__input-error_profession_position"></span>
+            <span class="about-me-input-error form__input-error form__input-error_profession_position"></span>
             <button type="submit" class="form__save-button submit-button">
               Сохранить
             </button>
