--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Место</title>
-    <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body class="page">
     <div class="page__content">
       <header class="header">
-        <img class="header__logo" src="./image/header/logo.svg" alt="Логотип" />
+        <img class="header__logo" src="<%=require('./image/header/logo.svg')%>" alt="Логотип" />
       </header>
       <main>
         <section class="profile">
           <img
             class="profile__avatar"
-            src="./image/profile/avatar.svg"
+            src="<%=require('./image/profile/avatar.svg')%>"
             alt="аватар"
           />
           <div class="profile__info">
@@ -137,6 +136,5 @@
         <button type="button" class="card__delete-button"></button>
       </div>
     </template>
-    <script type="module" src="./pages/index.js"></script>
   </body>
 </html>
