feet: add avatar edit button

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,8 @@
       </header>
       <main>
         <section class="profile">
-          <img
-            class="profile__avatar"
-            src="<%=require('./image/profile/avatar.svg')%>"
-            alt="аватар"
-          />
+          <button type="button" class="profile__edit-avatar">
+          </button>
           <div class="profile__info">
             <h1 class="profile__nick-name">Жак-Ив Кусто</h1>
             <button type="button" class="profile__edit"></button>
