--- a/src/index.html
+++ b/src/index.html
@@ -193,6 +193,18 @@
           <span class="card__like-counter"></span>
           </div>
         </div>
+      </div>
+    </template>
+    <template id="template-userCard">
+      <div class="card">
+        <img class="card__image" src="#" alt="#" />
+        <div class="card__title-wrap">
+          <h2 class="card__title">#</h2>
+          <div class="card__like-box">
+          <button type="button" class="card__like-button"></button>
+          <span class="card__like-counter"></span>
+          </div>
+        </div>
         <button type="button" class="card__delete-button"></button>
       </div>
     </template>
