--- a/src/index.html
+++ b/src/index.html
@@ -53,9 +53,7 @@
               required
             />
             <span class="avatar-input-error form__input-error form__input-error_avatar-link_position"></span>
-            <button type="submit" class="form__save-button submit-button">
-              Сохранить
-            </button>
+            <button type="submit" class="form__save-button submit-button">Сохранить</button>
             <button
               type="button"
               class="popup__close-button"
@@ -88,16 +86,14 @@
             <input
               type="text"
               name="about"
-              id="about-me-input"
+              id="about-input"
               class="form__input form__input_prof_position"
               minlength="2"
               maxlength="200"
               required
             />
             <span class="about-input-error form__input-error form__input-error_profession_position"></span>
-            <button type="submit" class="form__save-button submit-button">
-              Сохранить
-            </button>
+            <button type="submit" class="form__save-button submit-button">Сохранить</button>
             <button
               type="button"
               class="popup__close-button"
@@ -137,9 +133,7 @@
               required
             />
             <span class="place-link-input-error form__input-error form__input-error_place-link-input_position"></span>
-            <button type="submit" class="form__save-button submit-button">
-              Создать
-            </button>
+            <button type="submit" class="form__save-button submit-button">Создать</button>
             <button
               type="button"
               class="popup__close-button"
@@ -159,9 +153,7 @@
         >
           <div class="form__content">
             <h2 class="form__title">Вы уверены?</h2>
-            <button type="submit" class="form__you-sure-button submit-button">
-              Да
-            </button>
+            <button type="submit" class="form__you-sure-button submit-button">Да</button>
             <button
               type="button"
               class="popup__close-button"
