--- a/src/index.html
+++ b/src/index.html
@@ -174,20 +174,7 @@
         </div>
       </div>
     </div>
-
-    <template id="template-card">
-      <div class="card">
-        <img class="card__image" src="#" alt="#" />
-        <div class="card__title-wrap">
-          <h2 class="card__title">#</h2>
-          <div class="card__like-box">
-          <button type="button" class="card__like-button"></button>
-          <span class="card__like-counter"></span>
-          </div>
-        </div>
-      </div>
-    </template>
-    <template id="template-userCard">
+    <template id="template-сard">
       <div class="card">
         <img class="card__image" src="#" alt="#" />
         <div class="card__title-wrap">
